--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: cpp
 
 before_install:
- - sudo add-apt-repository -y "ppa:pasgui/ppa"
- - sudo apt-get -qq update
+ - lsb_release -a
+ - lscpu
+ - sudo add-apt-repository -y ppa:pasgui/ppa
+ - sudo apt-get update
  - sudo apt-get install premake5
 
 script:
