--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ before_install:
  - lscpu
  - sudo add-apt-repository -y ppa:pasgui/ppa
  - sudo apt-get update
+
+install:
  - sudo apt-get install premake5
 
 script:
