--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,6 @@
 language: cpp
 
-before_install:
- - lsb_release -a
- - lscpu
- - sudo add-apt-repository -y ppa:pasgui/ppa
- - sudo apt-get update
-
-install:
- - apt search premake
- - sudo apt-get install premake5
-
 script:
- - premake5 --file=tests/premake5.lua gmake
+ - tools/linux_x64/premake5 --file=tests/premake5.lua gmake
  - make -C tests/build/gmake release
  - tests/bin/nod_tests
