--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,13 @@
+sudo: required
+dist: trusty
 language: cpp
 
 compiler:
  - gcc
  - clang
 
-before_install:
- - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
- - sudo apt-get update -qq
- - sudo apt-get install -qq libyajl-dev libxml2-dev libxqilla-dev
-
 install:
- - if [ "$CXX" = "clang++" ]; then sudo apt-get install -qq libstdc++-4.8-dev; fi
- - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
- - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+ - $CXX --version
 
 before_script:
  - tools/linux_x64/premake5 --file=tests/premake5.lua gmake
