--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ language: cpp
 matrix:
   include:
     - compiler: gcc
+      env: COMPILER=gcc-4.8
+    - compiler: gcc
       addons:
         apt:
           sources:
@@ -20,6 +22,8 @@ matrix:
           packages:
             - g++-5
       env: COMPILER=g++-5
+    - compiler: clang
+      env: COMPILER=clang++-3.5
     - compiler: clang
       addons:
         apt:
@@ -39,10 +43,9 @@ matrix:
             - clang-3.7
       env: COMPILER=clang++-3.7
 
-install:
- - $CXX --version
 
 before_script:
+ - $CXX --version
  - tools/linux_x64/premake5 --file=tests/premake5.lua gmake
 
 script:
