--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ language: cpp
 matrix:
   include:
     - compiler: gcc
-      env: COMPILER=gcc-4.8
+      env:
+        - COMPILER=gcc-4.8
+        - CXX=g++-4.8
+        - CC=gcc-4.8
     - compiler: gcc
       addons:
         apt:
@@ -13,7 +16,10 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-4.9
-      env: COMPILER=g++-4.9
+      env:
+        - COMPILER=g++-4.9
+        - CXX=g++-4.9
+        - CC=gcc-4.9
     - compiler: gcc
       addons:
         apt:
@@ -21,9 +27,15 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
-      env: COMPILER=g++-5
+      env:
+        - COMPILER=g++-5
+        - CXX=g++-5.0
+        - CC=gcc-5.0
     - compiler: clang
-      env: COMPILER=clang++-3.5
+      env:
+        - COMPILER=clang++-3.5
+        - CXX=clang++-3.5
+        - CC=clang-3.5
     - compiler: clang
       addons:
         apt:
@@ -32,7 +44,10 @@ matrix:
             - llvm-toolchain-precise-3.6
           packages:
             - clang-3.6
-      env: COMPILER=clang++-3.6
+      env:
+        - COMPILER=clang++-3.6
+        - CXX=clang++-3.6
+        - CC=clang-3.6
     - compiler: clang
       addons:
         apt:
@@ -41,11 +56,15 @@ matrix:
             - llvm-toolchain-precise-3.7
           packages:
             - clang-3.7
-      env: COMPILER=clang++-3.7
+      env:
+        - COMPILER=clang++-3.7
+        - CXX=clang++-3.7
+        - CC?clang-3.7
 
 
 before_script:
  - $CXX --version
+ - $CC --version
  - tools/linux_x64/premake5 --file=tests/premake5.lua gmake
 
 script:
