--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: cpp
 matrix:
   include:
     - compiler: gcc
-      env: COMPILER=gcc-4.8
+      env: COMPILER=gcc
     - compiler: gcc
       addons:
         apt:
@@ -23,7 +23,7 @@ matrix:
             - g++-5
       env: COMPILER=g++-5
     - compiler: clang
-      env: COMPILER=clang++-3.5
+      env: COMPILER=clang++
     - compiler: clang
       addons:
         apt:
@@ -46,9 +46,7 @@ matrix:
 
 before_script:
  - export CXX=$COMPILER
- - export CC=$COMPILER
  - $CXX --version
- - $CC --version
  - tools/linux_x64/premake5 --file=tests/premake5.lua gmake
 
 script:
